internal/octogo/testdata/03_unsupported_features.ogo
func mathOps() {
    // ERROR "undefined: complex128"
    var c complex128

    a := 1
    b := 2
    if a < 2 && b > 1 {
        a = 3
    }

    _ = c
    _ = a
}
